--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ get_filename_component(APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/" ABSOLUTE)
 
 include("${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake")
 
-list(APPEND CORE_SOURCE_FILES src/core/neural_network_model.cc src/core/neural_network_trainer.cc)
+list(APPEND CORE_SOURCE_FILES src/core/model.cc src/core/trainer.cc)
 
 list(APPEND UTILS_SOURCE_FILES ${CORE_SOURCE_FILES} src/utils/math.cc)
 
