--- a/.gitignore
+++ b/.gitignore
@@ -142,5 +142,8 @@ _deps
 # External projects
 *-prefix/
 
+### Data ###
+data/mnist.txt
+
 # End of https://www.gitignore.io/api/c++,cmake,clion
 /cmake-build-debug/
